CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(Scheduler)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake" "${CMAKE_MODULE_PATH}")

# Simple stuff to keep Visual Studio from putting the files in weird locations
SET(BIN_OUTPUT_DIR ${Scheduler_BINARY_DIR}/bin)
SET(LIB_OUTPUT_DIR ${Scheduler_BINARY_DIR}/lib)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BIN_OUTPUT_DIR})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${BIN_OUTPUT_DIR})
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${LIB_OUTPUT_DIR})

#SET(Boost_USE_STATIC_LIBS ON)
#ADD_DEFINITIONS(-D_WIN32_WINNT=0x0601 -D_CRT_SECURE_NO_WARNINGS)
#ADD_DEFINITIONS(-DSERVICE_EXIT_EVENT="Global\\\\ServiceDeltagenExit")
# ADD_DEFINITIONS("-DBOOST_ALL_DYN_LINK")

SET(CMAKE_CXX_FLAGS "${CMAKE_COMPILER_FLAGS} -std=c++11")
SET(CMAKE_CXX_COMPILER "clang++")
SET(CMAKE_C_COMPILER "clang")

ADD_SUBDIRECTORY(src)
